Make repository name configurable

--- a/action.yaml
+++ b/action.yaml
@@ -1,6 +1,10 @@
 name: Retag existing image
-description: Applies an existing ECR image a new tag
+description: Applies an existing ECR image a new tag in given repository. Assumes that user has logged in to ECR.
 inputs:
+  repository-name:
+    description: Repository name
+    required: true
+    type: string
   source-tag:
     description: Existing source tag
     required: true
@@ -15,10 +19,10 @@ runs:
     - shell: bash
       id: tag
       run: |
-        manifest=$(aws ecr batch-get-image --repository-name etl-image --image-ids imageTag=${{ inputs.source-tag }} --query 'images[].imageManifest' --output text) &>/dev/null
+        manifest=$(aws ecr batch-get-image --repository-name ${{ inputs.repository-name }} --image-ids imageTag=${{ inputs.source-tag }} --query 'images[].imageManifest' --output text) &>/dev/null
         if [ -z "$manifest" ]
         then
           echo "Source tag ${{ inputs.source-tag }} not found!" 1>&2
           exit 1
         fi
-        aws ecr put-image --repository-name etl-image --image-tag ${{ inputs.target-tag }} --image-manifest "$manifest";
+        aws ecr put-image --repository-name ${{ inputs.repository-name }} --image-tag ${{ inputs.target-tag }} --image-manifest "$manifest";
